slotted() pseudo does not work with ID selector https://bugs.webkit.org/show_bug.cgi?id=160538 <rdar://problem/28534529>

Reviewed by Andreas Kling.

Source/WebCore:

When we saw an id selector while addin rules we immediately threw it into the m_idRules
optimization bucket and bailed out. However selectors containing ::slotted must always end
up in m_slottedPseudoElementRules list no matter what else is there.

Fix by treating id like other selectors and only choosing the bucket after analysing all
the selector components.

Test: fast/shadow-dom/css-scoping-slot-with-id.html

* css/RuleSet.cpp:
(WebCore::RuleSet::addRule): Also made this use switch instead of a series of ifs.

LayoutTests:

* fast/shadow-dom/css-scoping-slot-with-id-expected.html: Added.
* fast/shadow-dom/css-scoping-slot-with-id.html: Added.


Canonical link: https://commits.webkit.org/182130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208390 268f45cc-cd09-0410-ab3c-d52691b4dbfc